# micros

./: .gitignore  Cargo.toml  Makefile  README.md  files.sh  limine.cfg  limine.conf  linker.ld  net.pcap  rust-toolchain.toml  x86_64-unknown-none.json
.github/workflows/: build.yml
Limine/: limine
crates/abi/: Cargo.toml
src/: main.rs
src/arch/: mod.rs
src/kernel/: boot.rs  mod.rs  (+1 more)
src/user/: Cargo.toml  linker.ld
src/user/.cargo/: config.toml
src/user/apps/hello/: Cargo.toml
src/user/apps/ipc_cli/: Cargo.toml
src/user/apps/ipc_cli/src/: main.rs
src/user/apps/ipc_srv/: Cargo.toml
src/user/apps/ipc_srv/src/: main.rs
src/user/apps/sh/: shell.rs
src/user/init/: Cargo.toml
src/user/init/src/: main.rs
src/user/init/src/bootgfx/: fb.rs  font.rs  gfx.rs  mod.rs  splash.rs
src/user/libui/: Cargo.toml
src/user/libui/src/: canvas.rs  color.rs  event.rs  geom.rs  lib.rs  main.rs  text.rs
src/user/libui/src/widgets/: button.rs  label.rs  list_view.rs  menu.rs  mod.rs  panel.rs  scroll.rs  table_view.rs  text_area.rs  text_field.rs  tree_view.rs
src/user/rlibc/: Cargo.toml
src/user/rlibc/src/: chan.rs  dns.rs  errno.rs  exec.rs  fb.rs  heap.rs  http.rs  input.rs  lib.rs  log.rs  net.rs  power.rs  proc.rs  sched.rs  shm.rs  syscall.rs  time.rs  vfs.rs
src/user/wm/: Cargo.toml
src/user/wm/src/: app.rs  boot.rs  desktop.rs  icon.rs  input.rs  keymap.rs  main.rs  render.rs  runtime.rs  window.rs
src/user/wm/src/apps/: browser.rs  browser_renderer.rs  clock.rs  demo.rs  explorer.rs  hello.rs  mod.rs  netinfo.rs  notepad.rs  taskmgr.rs
(+93 files in other folders)
