[workspace]
resolver = "2"
members = [
  "rlibc",
  "libui",
  "init",
  "wm",
  "apps/hello",
  "apps/ipc_cli",
  "apps/ipc_srv",
]

default-members = [
  "rlibc",
  "init",
  "wm",
]

[workspace.dependencies]
micros-abi = { path = "../../crates/abi" }

[profile.release]
panic = "abort"
lto = true
codegen-units = 1
